docs:add swagger Components and employee,permission api
